src/parser/grammar.rs
#![allow(non_snake_case)]
use super::{
    syntax_tree::{TokenKind, TreeKind},
    Parser,
};
/// [0] QueryUnit -> Query
pub(super) fn parse_QueryUnit(p: &mut Parser) {
    let marker = p.open();
    parse_Query(p);
    p.close(marker, TreeKind::QueryUnit);
}
/// [1] Query -> Prologue (SelectQuery | ConstructQuery | DescribeQuery | AskQuery) ValuesClause
pub(super) fn parse_Query(p: &mut Parser) {
    let marker = p.open();
    parse_Prologue(p);
    match p.nth(0) {
        TokenKind::SELECT => {
            parse_SelectQuery(p);
        }
        TokenKind::CONSTRUCT => {
            parse_ConstructQuery(p);
        }
        TokenKind::DESCRIBE => {
            parse_DescribeQuery(p);
        }
        TokenKind::ASK => {
            parse_AskQuery(p);
        }
        TokenKind::Eof => {
            eprintln!("Unexpected Eof");
            p.close(marker, TreeKind::ErrorTree);
            return;
        }
        _ => {
            p.advance_with_error("Expected ....");
        }
    };
    parse_ValuesClause(p);
    p.close(marker, TreeKind::Query);
}
/// [2] Prologue -> (BaseDecl | PrefixDecl)*
pub(super) fn parse_Prologue(p: &mut Parser) {
    let marker = p.open();
    while [TokenKind::BASE, TokenKind::PREFIX].contains(&p.nth(0)) {
        match p.nth(0) {
            TokenKind::BASE => {
                parse_BaseDecl(p);
            }
            TokenKind::PREFIX => {
                parse_PrefixDecl(p);
            }
            TokenKind::Eof => {
                eprintln!("Unexpected Eof");
                p.close(marker, TreeKind::ErrorTree);
                return;
            }
            _ => {
                p.advance_with_error("Expected ....");
            }
        };
    }
    p.close(marker, TreeKind::Prologue);
}
/// [3] SelectQuery -> SelectClause DatasetClause* WhereClause SolutionModifier
pub(super) fn parse_SelectQuery(p: &mut Parser) {
    let marker = p.open();
    parse_SelectClause(p);
    while [TokenKind::FROM].contains(&p.nth(0)) {
        parse_DatasetClause(p);
    }
    parse_WhereClause(p);
    parse_SolutionModifier(p);
    p.close(marker, TreeKind::SelectQuery);
}
/// [4] ConstructQuery -> 'CONSTRUCT' (ConstructTemplate DatasetClause* WhereClause SolutionModifier | DatasetClause* 'WHERE' '{' TriplesTemplate? '}' SolutionModifier)
pub(super) fn parse_ConstructQuery(p: &mut Parser) {
    let marker = p.open();
    p.expect(TokenKind::CONSTRUCT);
    match p.nth(0) {
        TokenKind::LCurly => {
            parse_ConstructTemplate(p);
            while [TokenKind::FROM].contains(&p.nth(0)) {
                parse_DatasetClause(p);
            }
            parse_WhereClause(p);
            parse_SolutionModifier(p);
        }
        TokenKind::WHERE | TokenKind::FROM => {
            while [TokenKind::FROM].contains(&p.nth(0)) {
                parse_DatasetClause(p);
            }
            p.expect(TokenKind::WHERE);
            p.expect(TokenKind::LCurly);
            if p
                .at_any(
                    &[
                        TokenKind::DECIMAL,
                        TokenKind::DOUBLE_NEGATIVE,
                        TokenKind::NIL,
                        TokenKind::IRIREF,
                        TokenKind::DOUBLE_POSITIVE,
                        TokenKind::PNAME_NS,
                        TokenKind::VAR2,
                        TokenKind::False,
                        TokenKind::DECIMAL_NEGATIVE,
                        TokenKind::INTEGER_NEGATIVE,
                        TokenKind::ANON,
                        TokenKind::VAR1,
                        TokenKind::STRING_LITERAL_LONG1,
                        TokenKind::STRING_LITERAL_LONG2,
                        TokenKind::STRING_LITERAL1,
                        TokenKind::LBrack,
                        TokenKind::DOUBLE,
                        TokenKind::BLANK_NODE_LABEL,
                        TokenKind::PNAME_LN,
                        TokenKind::True,
                        TokenKind::INTEGER,
                        TokenKind::INTEGER_POSITIVE,
                        TokenKind::LParen,
                        TokenKind::STRING_LITERAL2,
                        TokenKind::DECIMAL_POSITIVE,
                    ],
                )
            {
                parse_TriplesTemplate(p);
            }
            p.expect(TokenKind::RCurly);
            parse_SolutionModifier(p);
        }
        TokenKind::Eof => {
            eprintln!("Unexpected Eof");
            p.close(marker, TreeKind::ErrorTree);
            return;
        }
        _ => {
            p.advance_with_error("Expected ....");
        }
    };
    p.close(marker, TreeKind::ConstructQuery);
}
/// [5] DescribeQuery -> 'DESCRIBE' (VarOrIri VarOrIri* | '*') DatasetClause* WhereClause? SolutionModifier
pub(super) fn parse_DescribeQuery(p: &mut Parser) {
    let marker = p.open();
    p.expect(TokenKind::DESCRIBE);
    match p.nth(0) {
        TokenKind::IRIREF
        | TokenKind::PNAME_LN
        | TokenKind::VAR2
        | TokenKind::VAR1
        | TokenKind::PNAME_NS => {
            parse_VarOrIri(p);
            while [
                TokenKind::VAR2,
                TokenKind::PNAME_LN,
                TokenKind::PNAME_NS,
                TokenKind::IRIREF,
                TokenKind::VAR1,
            ]
                .contains(&p.nth(0))
            {
                parse_VarOrIri(p);
            }
        }
        TokenKind::Star => {
            p.expect(TokenKind::Star);
        }
        TokenKind::Eof => {
            eprintln!("Unexpected Eof");
            p.close(marker, TreeKind::ErrorTree);
            return;
        }
        _ => {
            p.advance_with_error("Expected ....");
        }
    };
    while [TokenKind::FROM].contains(&p.nth(0)) {
        parse_DatasetClause(p);
    }
    if p.at_any(&[TokenKind::WHERE, TokenKind::LCurly]) {
        parse_WhereClause(p);
    }
    parse_SolutionModifier(p);
    p.close(marker, TreeKind::DescribeQuery);
}
/// [6] AskQuery -> 'ASK' DatasetClause* WhereClause SolutionModifier
pub(super) fn parse_AskQuery(p: &mut Parser) {
    let marker = p.open();
    p.expect(TokenKind::ASK);
    while [TokenKind::FROM].contains(&p.nth(0)) {
        parse_DatasetClause(p);
    }
    parse_WhereClause(p);
    parse_SolutionModifier(p);
    p.close(marker, TreeKind::AskQuery);
}
/// [7] ValuesClause -> ('VALUES' DataBlock)?
pub(super) fn parse_ValuesClause(p: &mut Parser) {
    let marker = p.open();
    if p.at_any(&[TokenKind::VALUES]) {
        p.expect(TokenKind::VALUES);
        parse_DataBlock(p);
    }
    p.close(marker, TreeKind::ValuesClause);
}
/// [8] UpdateUnit -> Update
pub(super) fn parse_UpdateUnit(p: &mut Parser) {
    let marker = p.open();
    parse_Update(p);
    p.close(marker, TreeKind::UpdateUnit);
}
/// [9] Update -> Prologue (UpdateOne (';' Update)?)?
pub(super) fn parse_Update(p: &mut Parser) {
    let marker = p.open();
    parse_Prologue(p);
    if p
        .at_any(
            &[
                TokenKind::LOAD,
                TokenKind::INSERT_DATA,
                TokenKind::DELETE,
                TokenKind::DROP,
                TokenKind::CREATE,
                TokenKind::MOVE,
                TokenKind::CLEAR,
                TokenKind::COPY,
                TokenKind::DELETE_DATA,
                TokenKind::DELETE_WHERE,
                TokenKind::INSERT,
                TokenKind::WITH,
                TokenKind::ADD,
            ],
        )
    {
        parse_UpdateOne(p);
        if p.at_any(&[TokenKind::Semicolon]) {
            p.expect(TokenKind::Semicolon);
            parse_Update(p);
        }
    }
    p.close(marker, TreeKind::Update);
}
/// [10] BaseDecl -> 'BASE' 'IRIREF'
pub(super) fn parse_BaseDecl(p: &mut Parser) {
    let marker = p.open();
    p.expect(TokenKind::BASE);
    p.expect(TokenKind::IRIREF);
    p.close(marker, TreeKind::BaseDecl);
}
/// [11] PrefixDecl -> 'PREFIX' 'PNAME_NS' 'IRIREF'
pub(super) fn parse_PrefixDecl(p: &mut Parser) {
    let marker = p.open();
    p.expect(TokenKind::PREFIX);
    p.expect(TokenKind::PNAME_NS);
    p.expect(TokenKind::IRIREF);
    p.close(marker, TreeKind::PrefixDecl);
}
/// [12] SelectClause -> 'SELECT' ('DISTINCT' | 'REDUCED')? ((Var | '(' Expression 'AS' Var ')') (Var | '(' Expression 'AS' Var ')')* | '*')
pub(super) fn parse_SelectClause(p: &mut Parser) {
    let marker = p.open();
    p.expect(TokenKind::SELECT);
    if p.at_any(&[TokenKind::REDUCED, TokenKind::DISTINCT]) {
        match p.nth(0) {
            TokenKind::DISTINCT => {
                p.expect(TokenKind::DISTINCT);
            }
            TokenKind::REDUCED => {
                p.expect(TokenKind::REDUCED);
            }
            TokenKind::Eof => {
                eprintln!("Unexpected Eof");
                p.close(marker, TreeKind::ErrorTree);
                return;
            }
            _ => {
                p.advance_with_error("Expected ....");
            }
        };
    }
    match p.nth(0) {
        TokenKind::VAR2 | TokenKind::VAR1 | TokenKind::LParen => {
            match p.nth(0) {
                TokenKind::VAR1 | TokenKind::VAR2 => {
                    parse_Var(p);
                }
                TokenKind::LParen => {
                    p.expect(TokenKind::LParen);
                    parse_Expression(p);
                    p.expect(TokenKind::AS);
                    parse_Var(p);
                    p.expect(TokenKind::RParen);
                }
                TokenKind::Eof => {
                    eprintln!("Unexpected Eof");
                    p.close(marker, TreeKind::ErrorTree);
                    return;
                }
                _ => {
                    p.advance_with_error("Expected ....");
                }
            };
            while [TokenKind::VAR1, TokenKind::VAR2, TokenKind::LParen]
                .contains(&p.nth(0))
            {
                match p.nth(0) {
                    TokenKind::VAR1 | TokenKind::VAR2 => {
                        parse_Var(p);
                    }
                    TokenKind::LParen => {
                        p.expect(TokenKind::LParen);
                        parse_Expression(p);
                        p.expect(TokenKind::AS);
                        parse_Var(p);
                        p.expect(TokenKind::RParen);
                    }
                    TokenKind::Eof => {
                        eprintln!("Unexpected Eof");
                        p.close(marker, TreeKind::ErrorTree);
                        return;
                    }
                    _ => {
                        p.advance_with_error("Expected ....");
                    }
                };
            }
        }
        TokenKind::Star => {
            p.expect(TokenKind::Star);
        }
        TokenKind::Eof => {
            eprintln!("Unexpected Eof");
            p.close(marker, TreeKind::ErrorTree);
            return;
        }
        _ => {
            p.advance_with_error("Expected ....");
        }
    };
    p.close(marker, TreeKind::SelectClause);
}
/// [13] DatasetClause -> 'FROM' (DefaultGraphClause | NamedGraphClause)
pub(super) fn parse_DatasetClause(p: &mut Parser) {
    let marker = p.open();
    p.expect(TokenKind::FROM);
    match p.nth(0) {
        TokenKind::IRIREF | TokenKind::PNAME_NS | TokenKind::PNAME_LN => {
            parse_DefaultGraphClause(p);
        }
        TokenKind::NAMED => {
            parse_NamedGraphClause(p);
        }
        TokenKind::Eof => {
            eprintln!("Unexpected Eof");
            p.close(marker, TreeKind::ErrorTree);
            return;
        }
        _ => {
            p.advance_with_error("Expected ....");
        }
    };
    p.close(marker, TreeKind::DatasetClause);
}
/// [14] WhereClause -> 'WHERE'? GroupGraphPattern
pub(super) fn parse_WhereClause(p: &mut Parser) {
    let marker = p.open();
    if p.at_any(&[TokenKind::WHERE]) {
        p.expect(TokenKind::WHERE);
    }
    parse_GroupGraphPattern(p);
    p.close(marker, TreeKind::WhereClause);
}
/// [15] SolutionModifier -> GroupClause? HavingClause? OrderClause? LimitOffsetClauses?
pub(super) fn parse_SolutionModifier(p: &mut Parser) {
    let marker = p.open();
    if p.at_any(&[TokenKind::GROUP]) {
        parse_GroupClause(p);
    }
    if p.at_any(&[TokenKind::HAVING]) {
        parse_HavingClause(p);
    }
    if p.at_any(&[TokenKind::ORDER]) {
        parse_OrderClause(p);
    }
    if p.at_any(&[TokenKind::LIMIT, TokenKind::OFFSET]) {
        parse_LimitOffsetClauses(p);
    }
    p.close(marker, TreeKind::SolutionModifier);
}
/// [16] SubSelect -> SelectClause WhereClause SolutionModifier ValuesClause
pub(super) fn parse_SubSelect(p: &mut Parser) {
    let marker = p.open();
    parse_SelectClause(p);
    parse_WhereClause(p);
    parse_SolutionModifier(p);
    parse_ValuesClause(p);
    p.close(marker, TreeKind::SubSelect);
}
/// [17] Var -> 'VAR1' | 'VAR2'
pub(super) fn parse_Var(p: &mut Parser) {
    let marker = p.open();
    match p.nth(0) {
        TokenKind::VAR1 => {
            p.expect(TokenKind::VAR1);
        }
        TokenKind::VAR2 => {
            p.expect(TokenKind::VAR2);
        }
        TokenKind::Eof => {
            eprintln!("Unexpected Eof");
            p.close(marker, TreeKind::ErrorTree);
            return;
        }
        _ => {
            p.advance_with_error("Expected ....");
        }
    };
    p.close(marker, TreeKind::Var);
}
/// [18] Expression -> ConditionalOrExpression
pub(super) fn parse_Expression(p: &mut Parser) {
    let marker = p.open();
    parse_ConditionalOrExpression(p);
    p.close(marker, TreeKind::Expression);
}
/// [19] ConstructTemplate -> '{' ConstructTriples? '}'
pub(super) fn parse_ConstructTemplate(p: &mut Parser) {
    let marker = p.open();
    p.expect(TokenKind::LCurly);
    if p
        .at_any(
            &[
                TokenKind::False,
                TokenKind::VAR1,
                TokenKind::INTEGER_NEGATIVE,
                TokenKind::DECIMAL_POSITIVE,
                TokenKind::STRING_LITERAL_LONG2,
                TokenKind::PNAME_LN,
                TokenKind::DECIMAL_NEGATIVE,
                TokenKind::LParen,
                TokenKind::DOUBLE_NEGATIVE,
                TokenKind::STRING_LITERAL2,
                TokenKind::PNAME_NS,
                TokenKind::DOUBLE,
                TokenKind::VAR2,
                TokenKind::DOUBLE_POSITIVE,
                TokenKind::IRIREF,
                TokenKind::True,
                TokenKind::DECIMAL,
                TokenKind::INTEGER_POSITIVE,
                TokenKind::INTEGER,
                TokenKind::STRING_LITERAL_LONG1,
                TokenKind::LBrack,
                TokenKind::STRING_LITERAL1,
                TokenKind::BLANK_NODE_LABEL,
                TokenKind::NIL,
                TokenKind::ANON,
            ],
        )
    {
        parse_ConstructTriples(p);
    }
    p.expect(TokenKind::RCurly);
    p.close(marker, TreeKind::ConstructTemplate);
}
/// [20] TriplesTemplate -> TriplesSameSubject ('.' TriplesTemplate?)?
pub(super) fn parse_TriplesTemplate(p: &mut Parser) {
    let marker = p.open();
    parse_TriplesSameSubject(p);
    if p.at_any(&[TokenKind::Dot]) {
        p.expect(TokenKind::Dot);
        if p
            .at_any(
                &[
                    TokenKind::DECIMAL,
                    TokenKind::DOUBLE_NEGATIVE,
                    TokenKind::NIL,
                    TokenKind::IRIREF,
                    TokenKind::DOUBLE_POSITIVE,
                    TokenKind::PNAME_NS,
                    TokenKind::VAR2,
                    TokenKind::False,
                    TokenKind::DECIMAL_NEGATIVE,
                    TokenKind::INTEGER_NEGATIVE,
                    TokenKind::ANON,
                    TokenKind::VAR1,
                    TokenKind::STRING_LITERAL_LONG1,
                    TokenKind::STRING_LITERAL_LONG2,
                    TokenKind::STRING_LITERAL1,
                    TokenKind::LBrack,
                    TokenKind::DOUBLE,
                    TokenKind::BLANK_NODE_LABEL,
                    TokenKind::PNAME_LN,
                    TokenKind::True,
                    TokenKind::INTEGER,
                    TokenKind::INTEGER_POSITIVE,
                    TokenKind::LParen,
                    TokenKind::STRING_LITERAL2,
                    TokenKind::DECIMAL_POSITIVE,
                ],
            )
        {
            parse_TriplesTemplate(p);
        }
    }
    p.close(marker, TreeKind::TriplesTemplate);
}
/// [21] VarOrIri -> Var | iri
pub(super) fn parse_VarOrIri(p: &mut Parser) {
    let marker = p.open();
    match p.nth(0) {
        TokenKind::VAR1 | TokenKind::VAR2 => {
            parse_Var(p);
        }
        TokenKind::IRIREF | TokenKind::PNAME_NS | TokenKind::PNAME_LN => {
            parse_iri(p);
        }
        TokenKind::Eof => {
            eprintln!("Unexpected Eof");
            p.close(marker, TreeKind::ErrorTree);
            return;
        }
        _ => {
            p.advance_with_error("Expected ....");
        }
    };
    p.close(marker, TreeKind::VarOrIri);
}
/// [22] DefaultGraphClause -> SourceSelector
pub(super) fn parse_DefaultGraphClause(p: &mut Parser) {
    let marker = p.open();
    parse_SourceSelector(p);
    p.close(marker, TreeKind::DefaultGraphClause);
}
/// [23] NamedGraphClause -> 'NAMED' SourceSelector
pub(super) fn parse_NamedGraphClause(p: &mut Parser) {
    let marker = p.open();
    p.expect(TokenKind::NAMED);
    parse_SourceSelector(p);
    p.close(marker, TreeKind::NamedGraphClause);
}
/// [24] SourceSelector -> iri
pub(super) fn parse_SourceSelector(p: &mut Parser) {
    let marker = p.open();
    parse_iri(p);
    p.close(marker, TreeKind::SourceSelector);
}
/// [25] iri -> 'IRIREF' | PrefixedName
pub(super) fn parse_iri(p: &mut Parser) {
    let marker = p.open();
    match p.nth(0) {
        TokenKind::IRIREF => {
            p.expect(TokenKind::IRIREF);
        }
        TokenKind::PNAME_NS | TokenKind::PNAME_LN => {
            parse_PrefixedName(p);
        }
        TokenKind::Eof => {
            eprintln!("Unexpected Eof");
            p.close(marker, TreeKind::ErrorTree);
            return;
        }
        _ => {
            p.advance_with_error("Expected ....");
        }
    };
    p.close(marker, TreeKind::iri);
}
/// [26] GroupGraphPattern -> '{' (SubSelect | GroupGraphPatternSub) '}'
pub(super) fn parse_GroupGraphPattern(p: &mut Parser) {
    let marker = p.open();
    p.expect(TokenKind::LCurly);
    match p.nth(0) {
        TokenKind::SELECT => {
            parse_SubSelect(p);
        }
        TokenKind::DOUBLE_POSITIVE
        | TokenKind::ANON
        | TokenKind::DOUBLE_NEGATIVE
        | TokenKind::DOUBLE
        | TokenKind::VAR1
        | TokenKind::INTEGER
        | TokenKind::PNAME_NS
        | TokenKind::STRING_LITERAL1
        | TokenKind::FILTER
        | TokenKind::LParen
        | TokenKind::LBrack
        | TokenKind::NIL
        | TokenKind::STRING_LITERAL2
        | TokenKind::STRING_LITERAL_LONG2
        | TokenKind::OPTIONAL
        | TokenKind::PNAME_LN
        | TokenKind::DECIMAL
        | TokenKind::BLANK_NODE_LABEL
        | TokenKind::VALUES
        | TokenKind::MINUS
        | TokenKind::IRIREF
        | TokenKind::INTEGER_POSITIVE
        | TokenKind::STRING_LITERAL_LONG1
        | TokenKind::False
        | TokenKind::DECIMAL_NEGATIVE
        | TokenKind::LCurly
        | TokenKind::True
        | TokenKind::GRAPH
        | TokenKind::SERVICE
        | TokenKind::BIND
